tests/macro-tests/cases/widget_new/missing_value2.stderr
error[E0061]: this method takes 1 argument but 0 arguments were supplied
 --> cases/widget_new/missing_value2.rs:6:9
  |
5 |       let _ = Wgt! {
  |  _____________-
6 | |         margin =
  | |         ^^^^^^
7 | |     };
  | |_____- an argument is missing
  |
note: method defined here
 --> $WORKSPACE/zng-wgt/src/layout_props.rs
  |
  | pub fn margin(child: impl UiNode, margin: impl IntoVar<SideOffsets>) -> impl UiNode {
  |        ^^^^^^
help: provide the argument
 --> $WORKSPACE/zng-wgt/src/wgt.rs
  |
  | margin(/* margin */)
  |
